<resources>
    <string name="app_name">BusTicketBooking</string>
    <string name="hello_there_welcome_back">Hello there, welcome back!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_user_name">Enter your username</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="title_activity_add_bus">Add_Bus</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>